Use Qt::SvgMiterJoin instead of Qt::MiterJoin

The two differ in what happens when the miter limit is exceeded.
According to

  https://bugreports.qt.io/browse/QTBUG-52640

Qt::SvgMiterJoin is what the pdf standard requires.

Closes: https://bugs.freedesktop.org/show_bug.cgi?id=102356